# MindSQL

./: pyproject.toml
