[tool.poetry]
name = "mindsql"
version = "0.2.01"
description = "Text-2-SQL made easy in just a few lines of python."
authors = ["Mindinventory <info@mindinventory.com>"]
readme = "README.md"
repository = "https://github.com/Mindinventory/MindSQL"
homepage = "https://www.mindinventory.com/text-to-sql-mindsql.php"
license = "GPL-3.0-or-later"
keywords = ["Text2SQL", "data", "text to sql", "Text-to-SQL", "RAG", "LLM", "NLP"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
